--- a/index.html
+++ b/index.html
@@ -125,15 +125,10 @@
                             </div>
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link active">
+                                    <a href="javascript:void(0)" class="nav-link active">
                                         Home
                                         <i class="ri-arrow-down-s-fill"></i>
                                     </a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item">
-                                            <a href="javascript:void(0)" class="nav-link">Home</a>
-                                        </li>
-                                    </ul>
                                 </li>
                                 <li class="nav-item">
                                     <a href="about.html" class="nav-link">
