personal details update

--- a/index.html
+++ b/index.html
@@ -141,13 +141,22 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a href="service-one.html" class="nav-link">Service One</a>
+                                            <a href="service-one.html" class="nav-link">Irrigation & Drainage</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="service-two.html" class="nav-link">Service Two</a>
+                                            <a href="service-two.html" class="nav-link">Lawn & Garden Care</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="service-details.html" class="nav-link">Service Details</a>
+                                            <a href="service-details.html" class="nav-link">Planting & Removal</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="service-one.html" class="nav-link">Paving</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="service-two.html" class="nav-link">Spring & Fall Cleanup</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="service-details.html" class="nav-link">Stone & Hardscaping</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -158,13 +167,13 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a href="project-one.html" class="nav-link">Project One</a>
+                                            <a href="project-one.html" class="nav-link">SLS Hotel</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="project-two.html" class="nav-link">Project Two</a>
+                                            <a href="project-two.html" class="nav-link">Taj Dubai</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="project-details.html" class="nav-link">Project Details</a>
+                                            <a href="project-details.html" class="nav-link">More Projects.</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -713,7 +722,7 @@
         </section>
 
 
-        <div class="member-wrap  bg-spring-wood ptb-100">
+        <!-- <div class="member-wrap  bg-spring-wood ptb-100">
             <img src="assets/img/tub-7.png" alt="Image" class="section-img style4">
             <div class="container">
                 <div class="section-title style2 text-center mb-50">
@@ -749,8 +758,8 @@
                             <img src="assets/img/team/member-2.jpg" alt="Image">
                         </div>
                         <div class="member-info">
-                            <h3>Alexander Mason</h3>
-                            <span>Garden Designer</span>
+                            <h3>Deepu Gupta</h3>
+                            <span>Website Developer</span>
                             <ul class="social-profile style2 list-style">
                                 <li><a target="_blank" href="https://facebook.com/"><i
                                             class="flaticon-facebook-logo"></i>
@@ -815,9 +824,118 @@
                     </div>
                 </div>
             </div>
+        </div> -->
+        
+        <div class="member-wrap  td-black bg-spring-wood ptb-100">
+            <img src="assets/img/tub-7.png" alt="Image" class="section-img style1">
+            <div class="container">
+                <div class="section-title style1 text-center mb-50">
+                    <span>OUR TEAM</span>
+                    <h2>Meet Our Awesome Team</h2>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xl-4 col-lg-6 col-md-6">
+                        <div class="member-card style1">
+                            <div class="member-img">
+                                <img src="assets/img/team/member-1.jpg" alt="Image">
+                            </div>
+                            <div class="member-info-wrap">
+                                <div class="member-info">
+                                    <h3>Penelope Layla</h3>
+                                    <span>Landscape Designer</span>
+                                </div>
+                                <div class="member-social-profile">
+                                    <span><i class="flaticon-plus"></i></span>
+                                    <ul class="social-profile style2 list-style">
+                                        <li><a target="_blank" href="https://facebook.com/"><i
+                                                    class="flaticon-facebook-logo"></i>
+                                            </a>
+                                        </li>
+                                        <li><a target="_blank" href="https://twitter.com/"> <i
+                                                    class="flaticon-twitter-1"></i>
+                                            </a></li>
+                                        <li><a target="_blank" href="https://instagram.com/"> <i
+                                                    class="flaticon-instagram"></i> </a>
+                                        </li>
+                                        <li><a target="_blank" href="https://linkedin.com/"> <i
+                                                    class="flaticon-linkedin"></i> </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-6 col-md-6">
+                        <div class="member-card style1">
+                            <div class="member-img">
+                                <img src="assets/img/team/member-2.jpg" alt="Image">
+                            </div>
+                            <div class="member-info-wrap">
+                                <div class="member-info">
+                                    <h3>Deepu Gupta</h3>
+                                    <span>Web Developer</span>
+                                </div>
+                                <div class="member-social-profile">
+                                    <span><i class="flaticon-plus"></i></span>
+                                    <ul class="social-profile style2 list-style">
+                                        <li><a target="_blank" href="https://facebook.com/"><i
+                                                    class="flaticon-facebook-logo"></i>
+                                            </a>
+                                        </li>
+                                        <li><a target="_blank" href="https://twitter.com/"> <i
+                                                    class="flaticon-twitter-1"></i>
+                                            </a></li>
+                                        <li><a target="_blank" href="https://instagram.com/"> <i
+                                                    class="flaticon-instagram"></i> </a>
+                                        </li>
+                                        <li><a target="_blank" href="https://linkedin.com/"> <i
+                                                    class="flaticon-linkedin"></i> </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-6 col-md-6">
+                        <div class="member-card style1">
+                            <div class="member-img">
+                                <img src="assets/img/team/member-3.jpg" alt="Image">
+                            </div>
+                            <div class="member-info-wrap">
+                                <div class="member-info">
+                                    <h3>Eliana Broklyn</h3>
+                                    <span>Senior Gardener</span>
+                                </div>
+                                <div class="member-social-profile">
+                                    <span><i class="flaticon-plus"></i></span>
+                                    <ul class="social-profile style2 list-style">
+                                        <li><a target="_blank" href="https://facebook.com/"><i
+                                                    class="flaticon-facebook-logo"></i>
+                                            </a>
+                                        </li>
+                                        <li><a target="_blank" href="https://twitter.com/"> <i
+                                                    class="flaticon-twitter-1"></i>
+                                            </a></li>
+                                        <li><a target="_blank" href="https://instagram.com/"> <i
+                                                    class="flaticon-instagram"></i> </a>
+                                        </li>
+                                        <li><a target="_blank" href="https://linkedin.com/"> <i
+                                                    class="flaticon-linkedin"></i> </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-10">
+                    <div class="col-xl-12 text-center">
+                        <p class="mb-0">Explore Our Awesome Team <a href="team.html" class="link style1">View All
+                                Member <i class="flaticon-right-arrow-1"></i></a></p>
+                    </div>
+                </div>
+            </div>
         </div>
-
-
         <section class="promo-video-wrap promo-bg bg-f ptb-100">
             <div class="overlay bg-timber-green op-8"></div>
             <div class="container">
@@ -1318,13 +1436,13 @@
                                     <li>
                                         <i class="flaticon-maps-and-flags"></i>
                                         <h6>Location</h6>
-                                        <p>2767 Abraham Street, NY 1002, New York, USA</p>
+                                        <p>Florestic Garden Street Al - Warsan 3 - Dubai - United Arab Emirates</p>
                                     </li>
                                     <li>
                                         <i class="flaticon-email-2"></i>
                                         <h6>Email</h6>
-                                        <a href="mail:contact@sunscape.me"><span class="__cf_email__"
-                                            data-cfemail="7e161b1212113e190b041b501d1113">contact@sunscape.me</span></a>
+                                        <a href="mailto:contact@sunscape.me"><span class="__cf_email__"
+                                            data-cfemail="">contact@sunscape.me</span></a>
                                     </li>
                                     <li>
                                         <i class="flaticon-call"></i>
